--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ $link-hover-decoration: underline;
 
 // Fonts
 $font-family-base: Helvetica, Arial, sans-serif, -apple-system;
-$font-family-heading: "Kodchasan-Regular", sans-serif;
+$font-family-heading: "Kodchasan", sans-serif;
 
 // Footer
 $footer-background-color: $primary;
