--- a/_includes/sub-footer.html
+++ b/_includes/sub-footer.html
@@ -6,6 +6,13 @@
           {% if site.data.social %}
             {% include social.html %}
           {% endif %}
+        </div>
+        <div class="sub-footer-inner">
+          {% if site.data.seo.acks %}
+          <div class="copyright">{{ site.data.seo.acks }}</div>
+          {% endif %}
+        </div>
+        <div class="sub-footer-inner">
           {% if site.data.seo.copyright_text %}
           <div class="copyright">{{ site.data.seo.copyright_text }}</div>
           {% endif %}
